# encrypted-volume-manager

./: config.yaml  main.py  pyproject.toml
src/enc_volume_manager/: __init__.py  bitwarden.py  config.py  custom_types.py  utils.py  veracrypt.py
